<resources>
    <string name="app_name">Simple Exchange Rates</string>
    <string name="rub">RUB</string>
    <string name="kzt">KZT</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="select_your_currency">Select your currency.</string>
    <string name="you_can_always_change_it">*You can always change it.</string>
    <string name="update">UPDATE</string>
    <string name="current_exchange_rate">Current Exchange Rate:</string>
    <string name="change_currency">CHANGE CURRENCY</string>
</resources>