<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/green_view"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/money_color"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_exchange_rate" />

    <TextView
        android:id="@+id/current_exchange_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/current_exchange_rate"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/green_view1"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:background="@color/money_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/green_view" />

    <View
        android:id="@+id/green_view2"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:background="@color/money_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/green_view1" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/money_color"
        android:text="@string/update"
        android:textSize="41sp"
        android:onClick="updateOnClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/green_view2" />

    <TextView
        android:id="@+id/first_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="27sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/green_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/green_view"
        app:layout_constraintTop_toTopOf="@+id/green_view" />

    <TextView
        android:id="@+id/second_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/green_view1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/green_view1"
        app:layout_constraintTop_toTopOf="@+id/green_view1" />


    <TextView
        android:id="@+id/third_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/green_view2"
        app:layout_constraintEnd_toEndOf="@+id/green_view2"
        app:layout_constraintStart_toStartOf="@+id/green_view2"
        app:layout_constraintTop_toTopOf="@+id/green_view2" />

    <Button
        android:id="@+id/change_currency_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/money_color"
        android:text="@string/change_currency"
        android:textSize="21sp"
        android:onClick="changeCurrencyOnClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_button" />


</androidx.constraintlayout.widget.ConstraintLayout>